<resources>
    <string name="app_name">Easy Budget</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">Nome</string>
    <string name="last_name">Cognome</string>
    <string name="login_title">Login</string>
    <string name="create_act">Registrati</string>
    <string name="logout">Logout</string>
    <string name="addAccount">Aggiungi conto</string>
    <string name="logoDescription">Logo</string>

    <!-- Menu -->
    <string name="transazioni">Transazioni</string>
    <string name="chart">Grafici</string>
    <string name="account">Conti</string>
    <string name="setting">Impostazioni</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_new_account">Crea conto</string>
    <string name="save_new_transaction">Aggiungi transazione</string>
    <string name="account_name">Nome account</string>
    <string name="account_amount_value">€ 0.0</string>
    <string name="account_amount">Importo</string>
    <string name="account_balance">Saldo</string>
    <string name="select_category">Seleziona categoria</string>
    <string name="creation_date">Data di creazione</string>

    <!-- Category -->
    <string name="category_account_cash">Contanti</string>
    <string name="category_account_account">Conti</string>
    <string name="category_account_credit_card">Carta di credito</string>
    <string name="category_account_debit_card">Carta di debito</string>
    <string name="category_account_savings">Risparmi</string>
    <string name="category_account_cash_electronic">Cash elettronico</string>
    <string name="category_account_investment">Investimenti</string>
    <string name="category_account_loans">Prestiti</string>
    <string name="category_account_insurance">Assicurazioni</string>


    <string name="spinner_title_account">Seleziona categoria conto</string>
    <string name="spinner_title_category">Seleziona categoria</string>
    <string name="select_period">Seleziona periodo</string>
    <string name="spinner_title_type">Seleziona conto</string>
    <string name="addTransaction">Nuova transazione</string>
    <string name="filter">Filtra</string>


    <string name="expense">Uscita</string>
    <string name="income">Entrata</string>
    <string name="incomes">Guadagni</string>
    <string name="expenses">Spese</string>
    <string name="select_date">Seleziona data</string>
    <string name="transaction_note">Note</string>

    <!-- Expense category -->
    <string name="category_expense_food">Cibo</string>
    <string name="category_expense_bills">Bollette</string>
    <string name="category_expense_rent">Affitto</string>
    <string name="category_expense_transport">Trasporti</string>
    <string name="category_expense_home">Casa</string>
    <string name="category_expense_car">Macchina</string>
    <string name="category_expense_entertainment">Intrattenimento</string>
    <string name="category_expense_shopping">Shopping</string>
    <string name="category_expense_insurance">Assicurazioni</string>
    <string name="category_expense_tax">Tasse</string>
    <string name="category_expense_selfcare">Cura di sè</string>
    <string name="category_expense_health">Salute</string>
    <string name="category_expense_sport">Sport</string>
    <string name="category_expense_gift">Regali</string>
    <string name="category_expense_trip">Viaggi</string>
    <string name="category_expense_education">Istruzione</string>
    <string name="category_expense_culture">Cultura</string>
    <string name="category_expense_animal">Animali</string>
    <string name="category_expense_other">Altro</string>

    <!-- Income category -->
    <string name="category_income_salary">Stipendio</string>
    <string name="category_income_sales">Vendita</string>
    <string name="category_income_refund">Rimborso</string>
    <string name="category_income_award">Premio</string>
    <string name="category_income_gift">Regalo</string>
    <string name="category_income_scholarship">Borsa di studio</string>
    <string name="category_income_rental">Noleggio</string>
    <string name="category_income_investment">Investimento</string>
    <string name="category_income_interest">Interessi</string>
    <string name="category_income_allowances">Quote</string>
    <string name="category_income_lottery">Lotteria</string>

    <string name="daily">Giornaliero</string>
    <string name="monthly">Mensile</string>
    <string name="yearly">Annuale</string>
    <string name="total">Totale</string>
    <string name="set_account_filter">Seleziona conti da filtrare</string>
    <string name="transaction_created">Transazione creata con successo</string>
    <string name="transaction_not_created">Impossibile creare la transazione. Riprovare</string>
    <string name="account_created">Conto creato con successo</string>
    <string name="account_not_created">Impossibile creare il conto. Riprovare</string>

    <string name="error_insert_amount">Prego inserire l\'importo della transazione</string>
    <string name="transaction_detail">Dettaglio transazione</string>
    <string name="data_loading">Caricamento dei dati</string>
    <string name="account_deleted">Conto eliminato con successo</string>
    <string name="account_not_deleted">Impossibile eliminare il conto. Riprovare</string>

    <!-- Stringhe per le impostazioni -->
    <string name="category_expense">Categorie uscite</string>
    <string name="category_income">Categorie entrate</string>
    <string name="language">Lingua</string>
    <string name="addCategory">Aggiungi categoria</string>
    <string name="category_name">Nome categoria</string>
    <string name="save_new_category">Crea categoria</string>
    <string name="mandatory_name_category">Il nome della categoria è un campo obbligatorio</string>
    <string name="choose_language" type="id">Seleziona lingua</string>

    <string name="connection_no">Connessione assente</string>
    <string name="connection_established">Connessione stabilita correttamente</string>
    <string name="wait_category_loading">Caricamento delle categorie in corso. Prego aspettare</string>
    <string name="error_no_account">Prima di aggiungere una transazione è necessario creare un conto</string>


    <string name="euro">€</string>
    <string name="create_account_title">Crea nuovo account</string>
    <string name="logging">Login in corso</string>
    <string name="login_failed">Login fallito: riprovare.</string>
    <string name="creating_account_failed">Creazione account fallita: riprovare.</string>
    <string name="error_fill_fields">Prego inserire tutti i valori richiesti</string>
    <string name="creating_account">Creazione account in corso</string>

    <string name="models">Modelli</string>
    <string name="model_created">Modello creato con successo</string>
    <string name="model_not_created">Impossibile creare il modello. Riprovare</string>
</resources>
