<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <EditText
            android:id="@+id/et_first_name"
            style="@style/viewCustom"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            tools:layout_marginTop="100dp" />
    <EditText
            android:id="@+id/et_last_name"
            style="@style/viewCustom"
            android:layout_below="@id/et_first_name"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteY="252dp"
            tools:layout_editor_absoluteX="8dp"/>
    <EditText
            android:id="@+id/et_email"
            style="@style/viewCustom"
            android:ems="10"
            android:layout_below="@id/et_last_name"
            android:hint="@string/email"
            android:inputType="textEmailAddress" tools:layout_editor_absoluteY="302dp"
            tools:layout_editor_absoluteX="8dp"/>
    <EditText
            android:id="@+id/et_password"
            style="@style/viewCustom"
            android:layout_below="@id/et_email"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" tools:layout_editor_absoluteY="354dp" tools:layout_editor_absoluteX="8dp"/>
    <Button
            android:id="@+id/btn_register"
            style="@style/viewCustom"
            android:layout_below="@id/et_password"
            android:background="@color/colorAccent"
            android:text="@string/create_act"
            android:textColor="@android:color/white"
            android:textStyle="bold" tools:layout_editor_absoluteY="456dp" tools:layout_editor_absoluteX="16dp"/>


</android.support.constraint.ConstraintLayout>