<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".SettingsFragment">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/transaction_titleBar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp">

        <TextView
                android:id="@+id/settings_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:text="@string/setting"
                android:textColor="@color/colorSecondaryDark"
                android:textSize="23sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        <ImageButton
                android:id="@+id/btn_bo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_date"
                android:background="@drawable/custom_trasparent_button"
                android:layout_gravity="center_vertical|center_horizontal"
                app:layout_constraintEnd_toStartOf="@+id/btn_bobo"
                android:layout_marginEnd="12dp"
                android:visibility="invisible"
                android:contentDescription="@string/filter"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:padding="10dp"/>

        <ImageButton
                android:id="@+id/btn_bobo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_filter"
                android:background="@drawable/custom_trasparent_button"
                android:layout_gravity="center_vertical|center_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp"
                android:visibility="invisible"
                android:contentDescription="@string/filter"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:padding="10dp"/>

    </android.support.constraint.ConstraintLayout>

    <Button
            android:id="@+id/btn_logout"
            android:layout_alignParentBottom="true"
            android:text="@string/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="80dp"/>

</android.support.constraint.ConstraintLayout>